<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройка</string>

    <string name="title_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>

    <string name="share_message">Привет! Рекомендую тебе курс по Андроид-разработке в Практикуме: https://praktikum.yandex.ru/android</string>
    <string name="support_email">butov.nikita1@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search">Поиск</string>
    <string name="reset_search">x</string>
</resources>