<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorOnPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:paddingBottom="40sp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/buttonSearch"
        android:text="@string/button_search"
        app:icon="@drawable/search"
        style="@style/MainButtonStyle"
        app:cornerRadius="@dimen/main_buttons_corner"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/buttonMedia"
        android:text="@string/button_media"
        style="@style/MainButtonStyle"
        app:cornerRadius="@dimen/main_buttons_corner"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/buttonSettings"
        android:text="@string/button_settings"
        style="@style/MainButtonStyle"
        app:cornerRadius="@dimen/main_buttons_corner"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />
</LinearLayout>