<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/backSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/title_settings"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_settings"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_menu_item"
            android:textColor="@android:color/black" />

        <Switch
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="false"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_settings"
        android:gravity="center_vertical"
        android:text="@string/share_app"
        android:textSize="@dimen/text_menu_item"
        android:textColor="@android:color/black"
        android:drawablePadding="@dimen/drawable_padding_settings"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_settings"
        android:gravity="center_vertical"
        android:text="@string/support"
        android:textSize="@dimen/text_menu_item"
        android:textColor="@android:color/black"
        android:drawablePadding="@dimen/drawable_padding_settings"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_settings"
        android:gravity="center_vertical"
        android:text="@string/terms"
        android:textSize="@dimen/text_menu_item"
        android:textColor="@android:color/black"
        android:drawablePadding="@dimen/drawable_padding_settings"
        app:drawableEndCompat="@drawable/forward_arrow" />

</LinearLayout>
